[package]
name = "playmate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true

[dependencies]
futures = "0.3.23"

rspotify = {version = "0.11.5", features = ["env-file", "cli"]}
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
toml = "0.5.9"

